--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,15 @@ mysql:
   user: root
   password: greta2023
   driver: mysql
-  database: bdd_all
+  database: testEG
+
+mysql2:
+  host: localhost
+  user: root
+  password: root
+  driver: mysql
+  database: bdd_test
+
 
 PG:
   host: greta-p2-g0.westeurope.cloudapp.azure.com
